[gd_scene load_steps=2 format=3 uid="uid://bipawj12cbpmb"]

[ext_resource type="Script" path="res://scripts/resourceHandler.gd" id="1_u5hr3"]

[node name="resourceHandler" type="Node"]
script = ExtResource("1_u5hr3")

[node name="manaGenerator" type="Timer" parent="."]

[connection signal="timeout" from="manaGenerator" to="." method="_on_mana_generator_timeout"]
